[tool.poetry]
name = "ml-models-pytorch"
version = "0.1.0"
description = ""
authors = ["Daniel Varoli <daniel.varoli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.10.1"
torchvision = "^0.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
